--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0"
+        "php": ">=7.0.0",
+        "filp/whoops": "~2.1",
+        "patricklouys/http": "~1.4",
+        "nikic/fast-route": "^1.2"
     },
     "autoload": {
         "psr-4": {
